PRevent type and source tiles from wrapping

--- a/shesmu-server/src/main/resources/main.css
+++ b/shesmu-server/src/main/resources/main.css
@@ -139,4 +139,5 @@ padding: 0.2em;
 border: 1px solid #888;
 background-color: #ddd;
 margin-left:1em;
+white-space:nowrap;
 }
